@@ -18,7 +18,7 @@ COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../sim" /DBUILDING_ENVIR /DHAVE_DLO
 
 OBJS=args.obj cenvir.obj cinifile.obj main.obj omnetapp.obj fsutils.obj \
      patmatch.obj speedmtr.obj filemgrs.obj akoutvectormgr.obj \
-     akaroarng.obj cxmldoccache.obj
+     akaroarng.obj cxmldoccache.obj cstrtokenizer2.obj
 LIBS=$(OMNETPP_SRC_DIR)/sim/sim_std.ilib
 
 #
